--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
       <h1>Ghibli World</h1>
       <nav>
         <ul class="menu">
-          <li><a  href="#" class="homeWindow">Home</a></li>
-          <li><a href="#" class="filmographyWindow">Filmography</a></li>
+          <li><a  href="#" class="home_button">Home</a></li>
+          <li><a href="#" class="movies_button">Filmography</a></li>
           <li><a href="#">Characters</a></li>
         </ul>
       </nav>
