--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,6 @@
     <meta charset="utf-8">
     <title>Data Lovers - Studio Ghibli</title>
     <link rel="stylesheet" href="style.css" /> 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gayathri&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/71936a9880.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/e5cb28d452.js" crossorigin="anonymous"></script>   
     
@@ -17,13 +14,15 @@
         <h1>Ghibli World</h1>
       </div>
       <nav>
-        <div class="menuContainer">
+        <div class="navContainer">
+          <div class="menuContainer">
+            <ul class="menu" id="menu">
+              <li><a  href="#" class="home_button" id= "home_button">Home</a></li>
+              <li><a href="#" class="movies_button" id= "movies_button">Filmography</a></li>
+              <li><a href="#" class="characters_button" id="characters_button">Characters</a></li>
+            </ul>
+          </div>
           <a href="#" class="menuHamburguesa" id="menuHamburguesa"><i class="fa fa-bars" aria-hidden="true"></i></a>
-          <ul class="menu" id="menu">
-            <li><a  href="#" class="home_button" id= "home_button">Home</a></li>
-            <li><a href="#" class="movies_button" id= "movies_button">Filmography</a></li>
-            <li><a href="#" class="characters_button" id="characters_button">Characters</a></li>
-          </ul>
         </div>
       </nav>
     </header>
