--- a/src/index.html
+++ b/src/index.html
@@ -4,26 +4,25 @@
     <meta charset="utf-8">
     <title>Data Lovers - Studio Ghibli</title>
     <link rel="stylesheet" href="style.css" /> 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gayathri&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/71936a9880.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/e5cb28d452.js" crossorigin="anonymous"></script>   
     
   </head>
   <body>
     <header> 
-      <div class="haederContainer">
+      <div class="headerContainer">
         <h1>Ghibli World</h1>
       </div>
       <nav>
-        <div class="menuContainer">
+        <div class="navContainer">
+          <div class="menuContainer">
+            <ul class="menu" id="menu">
+              <li><a  href="#" class="home_button" id= "home_button">Home</a></li>
+              <li><a href="#" class="movies_button" id= "movies_button">Filmography</a></li>
+              <li><a href="#" class="characters_button" id="characters_button">Characters</a></li>
+            </ul>
+          </div>
           <a href="#" class="menuHamburguesa" id="menuHamburguesa"><i class="fa fa-bars" aria-hidden="true"></i></a>
-          <ul class="menu" id="menu">
-            <li><a  href="#" class="home_button" id= "home_button">Home</a></li>
-            <li><a href="#" class="movies_button" id= "movies_button">Filmography</a></li>
-            <li><a href="#" class="characters_button" id="characters_button">Characters</a></li>
-          </ul>
         </div>
       </nav>
     </header>
@@ -33,17 +32,23 @@
           <h2 class="aboutTitle">About Studio Ghibli</h2>
           <p class="aboutText">It is a Japanese animation film studio headquartered in Koganei, Tokyo. Founded in 1985 by animators and directors Miyazaki Hayao and Takahata Isao and producer Suzuki Toshio. Studio Ghibli is known for the high quality of its filmmaking and its artistry. Its feature films won both critical and popular praise and influenced other animation studios.</p>
         </div>
-        <img src="https://i.ibb.co/Z6pC2gS/pngwing-com.png" alt="Totoro and friends" border="0">
+        <img src="https://i.ibb.co/Z6pC2gS/pngwing-com.png" class="totoroFriends" alt="Totoro and friends" border="0">
       </div>
       <div class= "secondPage">
         <div class = "selector" id = "selector">
           <label>Sort movies by:
           <select name="sortMovies" class="sortMovies">
             <option selected disabled>Choose sort order</option>
-            <option value="alphabetic">Alphabetic Order</option>
-            <option value="releaseAscending">Release Date (Ascending)</option>
-            <option value="releaseDescending">Release Date (Descending)</option>
-            <option value="score">Worst to Best rated</option>
+            <optgroup label="Alphabetic">
+              <option value="alphabetic">Alphabetic Order</option>
+            </optgroup>
+            <optgroup label="Release Date">
+              <option value="releaseAscending">Release Date (Ascending)</option>
+              <option value="releaseDescending">Release Date (Descending)</option>
+            </optgroup>
+            <optgroup label="Score">
+              <option value="score">Worst to Best rated</option>
+            </optgroup>
           </select> 
           </label>      
           <label>Filter by film director:
