--- a/index.html
+++ b/index.html
@@ -4,37 +4,78 @@
     <meta charset="utf-8">
     <title>Data Lovers - Studio Ghibli</title>
     <link rel="stylesheet" href="style.css" /> 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gayathri&display=swap" rel="stylesheet">    
+    <script src="https://kit.fontawesome.com/71936a9880.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/e5cb28d452.js" crossorigin="anonymous"></script>   
+    
   </head>
   <body>
     <header> 
-      <h1>Ghibli World</h1>
+      <div class="headerContainer">
+        <h1>Ghibli World</h1>
+      </div>
       <nav>
-        <ul class="menu">
-          <li><a  href="#" class="homeWindow">Home</a></li>
-          <li><a href="#" class="filmographyWindow">Filmography</a></li>
-          <li><a href="#">Characters</a></li>
-        </ul>
+        <div class="navContainer">
+          <div class="menuContainer">
+            <ul class="menu" id="menu">
+              <li><a  href="#" class="home_button" id= "home_button">Home</a></li>
+              <li><a href="#" class="movies_button" id= "movies_button">Filmography</a></li>
+              <li><a href="#" class="characters_button" id="characters_button">Characters</a></li>
+            </ul>
+          </div>
+          <a href="#" class="menuHamburguesa" id="menuHamburguesa"><i class="fa fa-bars" aria-hidden="true"></i></a>
+        </div>
       </nav>
     </header>
     <main>
       <div class="home" id="home">
-        <h2 class="aboutTitle">About Studio Ghibli</h2>
-        <p class="aboutText">It is a Japanese animation film studio headquartered in Koganei, Tokyo. Founded in 1985 by animators and directors Miyazaki Hayao and Takahata Isao and producer Suzuki Toshio. Studio Ghibli is known for the high quality of its filmmaking and its artistry. Its feature films won both critical and popular praise and influenced other animation studios.</p>
+        <div class="aboutDescription">
+          <h2 class="aboutTitle">About Studio Ghibli</h2>
+          <p class="aboutText">It is a Japanese animation film studio headquartered in Koganei, Tokyo. Founded in 1985 by animators and directors Miyazaki Hayao and Takahata Isao and producer Suzuki Toshio. Studio Ghibli is known for the high quality of its filmmaking and its artistry. Its feature films won both critical and popular praise and influenced other animation studios.</p>
+        </div>
+        <img src="https://i.ibb.co/Z6pC2gS/pngwing-com.png" class="totoroFriends" alt="Totoro and friends" border="0">
       </div>
-      <div class= "films" id ="films">
-        <div id="description">
-          Descripción de la película
-          <span id="movieData"></span>
-        </div> 
-      </div>      
+      <div class= "secondPage">
+        <div class = "selector" id = "selector">
+          <label>Sort movies by:
+          <select name="sortMovies" class="sortMovies">
+            <option selected disabled>Choose sort order</option>
+            <optgroup label="Alphabetic">
+              <option value="alphabetic">Alphabetic Order</option>
+            </optgroup>
+            <optgroup label="Release Date">
+              <option value="releaseAscending">Release Date (Ascending)</option>
+              <option value="releaseDescending">Release Date (Descending)</option>
+            </optgroup>
+            <optgroup label="Score">
+              <option value="score">Worst to Best rated</option>
+            </optgroup>
+          </select> 
+          </label>      
+          <label>Filter by film director:
+            <select name="filterMovies" class="filterMovies">
+              <option selected disabled>Choose a film director</option>
+              <option value="all">All</option>
+              <option value="Hayao Miyazaki">Hayao Miyazaki</option>
+              <option value="Isao Takahata">Isao Takahata</option>
+              <option value="Yoshifumi Kondō">Yoshifumi Kondō</option>
+              <option value="Hiroyuki Morita">Hiroyuki Morita</option>
+              <option value="Gorō Miyazaki">Gorō Miyazaki</option>
+              <option value="Hiromasa Yonebayashi">Hiromasa Yonebayashi</option>
+            </select> 
+          </label>   
+        </div>
+        <div  class= "films" id ="films"></div> 
+      </div>    
+      <div class="thirdPage">
+        <div class="characters" id="characters">
+
+        </div>
+      </div>  
     </main>
     <footer>      
-      <p class="website"><a href="https://www.ghibli.jp/">Studio Ghibli's Official Website</a></p>
-      <p class="website"><a href="https://twitter.com/JP_GHIBLI">Studio Ghibli's official Twitter account</a></p>
-      <p class="website"><a href="https://www.ghibli-museum.jp">Studio Ghibli Museum</a></p>
+      <p class="website"><a href="https://www.ghibli.jp/" target="_blank">Studio Ghibli's Official Website</a></p>
+      <p class="twitter"><a href="https://twitter.com/JP_GHIBLI" target="_blank"><i class="fab fa-twitter-square" style="color: #098ED6"></i></a></p>
+      <p class="website"><a href="https://www.ghibli-museum.jp" target="_blank">Studio Ghibli Museum</a></p>
     </footer> 
     <div id="root"></div>
     <script src="main.js" type="module"></script>
