--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,34 @@
         </div>
         <div  class= "films" id ="films"></div> 
       </div>    
-      <div class="thirdPage">
+      <div class="thirdPage" id="thirdPage">
+        <div class="selectorCharacters" id="selectorCharacters">
+          <label>Filter by film:
+            <select name="filterCharacters" class="filterCharacters">
+              <option selected disabled>Choose a film</option>
+              <option value="all">All</option>
+              <option value="From Up on Poppy Hill">From Up on Poppy Hill</option>
+              <option value="Grave of the Fireflies">Grave of the Fireflies</option>
+              <option value="Howl's Moving Castle">Howl's Moving Castle</option>
+              <option value="Kiki's Delivery Service">Kiki's Delivery Service</option>
+              <option value="My Neighbor Totoro">My Neighbor Totoro</option>
+              <option value="My Neighbors the Yamadas">My Neighbors the Yamadas</option>
+              <option value="Only Yesterday">Only Yesterday</option>
+              <option value="Pom Poko">Pom Poko</option>
+              <option value="Ponyo on the Cliff by the Sea">Ponyo on the Cliff by the Sea</option>
+              <option value="Porco Rosso">Porco Rosso</option>
+              <option value="Princess Mononoke">Princess Mononoke</option>
+              <option value="Spirited Away">Spirited Away</option>
+              <option value="Tales from Earthsea">Tales from Earthsea</option>
+              <option value="The Cat Returns">The Cat Returns</option>
+              <option value="The Secret World of Arrietty">The Secret World of Arrietty</option>
+              <option value="The Tale of the Princess Kaguya">The Tale of the Princess Kaguya</option>
+              <option value="The Wind Rises">The Wind Rises</option>
+              <option value="When Marnie Was There">When Marnie Was There</option>
+              <option value="Whisper of the Heart">Whisper of the Heart</option>
+            </select> 
+          </label>   
+        </div>
         <div class="characters" id="characters">
         </div>
       </div>  
