estadística, test de estadística, renderizar estadística y que se cierre solo menú hamburguesa

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
         <div class="aboutDescription">
           <h2 class="aboutTitle">About Studio Ghibli</h2>
           <p class="aboutText">It is a Japanese animation film studio headquartered in Koganei, Tokyo. Founded in 1985 by animators and directors Miyazaki Hayao and Takahata Isao and producer Suzuki Toshio. Studio Ghibli is known for the high quality of its filmmaking and its artistry. Its feature films won both critical and popular praise and influenced other animation studios.</p>
+          <p class="scoreAverage"> The average score (on a scale of 1 to 100) of Studio Ghibli's films is: <br><span id = "averageResult"></span></p>
         </div>
         <img src="https://i.ibb.co/Z6pC2gS/pngwing-com.png" class="totoroFriends" alt="Totoro and friends" border="0">
       </div>
@@ -71,6 +72,7 @@
             <select name="filterCharacters" class="filterCharacters">
               <option selected disabled>Choose a film</option>
               <option value="all">All</option>
+              <option value="Castle in the Sky">Castle in the Sky</option>
               <option value="From Up on Poppy Hill">From Up on Poppy Hill</option>
               <option value="Grave of the Fireflies">Grave of the Fireflies</option>
               <option value="Howl's Moving Castle">Howl's Moving Castle</option>
